fallbackswitch: Blacklisted due to GstAggregator
sys:1: Warning: cannot register existing type 'GstAggregator'
sys:1: Warning: cannot add private field to invalid (non-instantiatable) type '<invalid>'
sys:1: Warning: g_once_init_leave: assertion 'result != 0' failed
sys:1: Warning: g_type_register_static: assertion 'parent_type > 0' failed
thread '<unnamed>' panicked at 'assertion failed: !ptr.is_null()', /home/phil/.cargo/git/checkouts/glib-928cf7b282977403/0314690/src/translate.rs:1181:9
stack backtrace:
0: 0x7f5242ca228b - backtrace::backtrace::libunwind::trace::hfe5db90796807973
at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.29/src/backtrace/libunwind.rs:88
1: 0x7f5242ca228b - backtrace::backtrace::trace_unsynchronized::h34b865a835594335
at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.29/src/backtrace/mod.rs:66
2: 0x7f5242ca228b - std::sys_common::backtrace::_print::h527254ae44989167
at src/libstd/sys_common/backtrace.rs:47
3: 0x7f5242ca228b - std::sys_common::backtrace::print::he85dd5ddddf46503
at src/libstd/sys_common/backtrace.rs:36
4: 0x7f5242ca228b - std::panicking::default_hook::{{closure}}::h847a2eb38b396f14
at src/libstd/panicking.rs:200
5: 0x7f5242ca1f67 - std::panicking::default_hook::h2ca0f9a30a0e206b
at src/libstd/panicking.rs:214
6: 0x7f5242ca29e0 - std::panicking::rust_panic_with_hook::hffcefc09751839d1
at src/libstd/panicking.rs:477
7: 0x7f5242c98925 - std::panicking::begin_panic::h65d351cbad6c6833
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libstd/panicking.rs:411
8: 0x7f5242c9a5aa - <alloc::string::String as glib::translate::FromGlibPtrNone<*const i8>>::from_glib_none::h89883025d3ac5599
at /home/phil/.cargo/git/checkouts/glib-928cf7b282977403/0314690/src/translate.rs:1181
9: 0x7f5242c9a5aa - glib::translate::from_glib_none::hc17b752f3008d063
at /home/phil/.cargo/git/checkouts/glib-928cf7b282977403/0314690/src/translate.rs:1130
10: 0x7f5242c9a5aa - glib::types::Type::name::hc1933fc81787d219
at /home/phil/.cargo/git/checkouts/glib-928cf7b282977403/0314690/src/types.rs:72
11: 0x7f5242c9a8f5 - <glib::types::Type as core::fmt::Debug>::fmt::h21723994f6b0ce16
at /home/phil/.cargo/git/checkouts/glib-928cf7b282977403/0314690/src/types.rs:135
12: 0x7f5242cb8c3c - core::fmt::write::h85435378f7fd6609
at src/libcore/fmt/mod.rs:1016
13: 0x7f5242ca2715 - core::fmt::Write::write_fmt::ha4b1e24f451f219a
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libcore/fmt/mod.rs:195
14: 0x7f5242ca2715 - std::panicking::continue_panic_fmt::PanicPayload::fill::{{closure}}::haa1b8bafd6986d07
at src/libstd/panicking.rs:359
15: 0x7f5242ca2715 - core::option::Option<T>::get_or_insert_with::hb5d24362256028a1
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libcore/option.rs:814
16: 0x7f5242ca2715 - std::panicking::continue_panic_fmt::PanicPayload::fill::h4e08079138a1d5c9
at src/libstd/panicking.rs:357
17: 0x7f5242ca2715 - <std::panicking::continue_panic_fmt::PanicPayload as core::panic::BoxMeUp>::get::h36c1ededb1fb326a
at src/libstd/panicking.rs:372
18: 0x7f5242ca29cc - std::panicking::rust_panic_with_hook::hffcefc09751839d1
at src/libstd/panicking.rs:476
19: 0x7f5242ca2562 - std::panicking::continue_panic_fmt::hc0f142c930c846fc
at src/libstd/panicking.rs:384
20: 0x7f5242ca24af - std::panicking::begin_panic_fmt::ha6acf0ffd6d7f80d
at src/libstd/panicking.rs:339
21: 0x7f5242c7f6ac - <gstfallbackswitch::fallbackswitch::FallbackSwitch as glib::subclass::types::ObjectSubclass>::get_type::haaa84b83b3152450
at /home/phil/dev/rust/gst-plugins-rs/<::glib::subclass::types::glib_object_subclass macros>:14
22: 0x7f5242c8452b - gstfallbackswitch::fallbackswitch::register::h96f695e5d4b0cc69
at gst-plugin-fallbackswitch/src/fallbackswitch.rs:757
23: 0x7f5242c8452b - gstfallbackswitch::plugin_init::h46fab392f1756c00
at gst-plugin-fallbackswitch/src/lib.rs:45
24: 0x7f5242c8452b - gstfallbackswitch::plugin_desc::plugin_init_trampoline::{{closure}}::hd843ff4a4fc95459
at /home/phil/dev/rust/gst-plugins-rs/<::gst::subclass::plugin::gst_plugin_define macros>:43
25: 0x7f5242c8452b - core::ops::function::FnOnce::call_once::hbea405831d8f46df
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libcore/ops/function.rs:231
26: 0x7f5242c8452b - <std::panic::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once::hc9292e6c9e3c22de
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libstd/panic.rs:315
27: 0x7f5242c8452b - std::panicking::try::do_call::h9a4325ae9b2c9fcb
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libstd/panicking.rs:296
28: 0x7f5242ca32fa - __rust_maybe_catch_panic
at src/libpanic_unwind/lib.rs:82
29: 0x7f5242c81b4c - std::panicking::try::haf02146d20a0c651
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libstd/panicking.rs:275
30: 0x7f5242c81b4c - std::panic::catch_unwind::h9583a72c52fc72d3
at /rustc/eae3437dfe991621e8afdc82734f4a172d7ddf9b/src/libstd/panic.rs:394
31: 0x7f5242c81b4c - gstfallbackswitch::plugin_desc::plugin_init_trampoline::h8c96f8f2b9660d31
at /home/phil/dev/rust/gst-plugins-rs/<::gst::subclass::plugin::gst_plugin_define macros>:41
32: 0x7f525200a8e5 - gst_plugin_register_func
at ../subprojects/gstreamer/gst/gstplugin.c:532
33: 0x7f525200a8e5 - gst_plugin_register_func
at ../subprojects/gstreamer/gst/gstplugin.c:486
34: 0x7f525200c86d - _priv_gst_plugin_load_file_for_registry
at ../subprojects/gstreamer/gst/gstplugin.c:899
35: 0x7f525200f21f - do_plugin_load
at ../subprojects/gstreamer/gst/gstpluginloader.c:728
36: 0x7f525200f21f - handle_rx_packet
at ../subprojects/gstreamer/gst/gstpluginloader.c:836
37: 0x7f525200f21f - read_one
at ../subprojects/gstreamer/gst/gstpluginloader.c:1006
38: 0x7f525200f21f - exchange_packets
at ../subprojects/gstreamer/gst/gstpluginloader.c:1034
39: 0x7f52520101c8 - _gst_plugin_loader_client_run
at ../subprojects/gstreamer/gst/gstpluginloader.c:583
40: 0x56107bcb8135 - main
at ../subprojects/gstreamer/libs/gst/helpers/gst-plugin-scanner.c:67
41: 0x7f5251c7209b - __libc_start_main
42: 0x56107bcb818a - _start