fallbackswitch: Fix remaining GType name conflicts between bundled and gstbase aggregator

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/issues/67